  - Removed the stat cache completely. It's not any major benefit
    unless you have a dog slow system / disk with lots of requests and
    even then it has questionable benefits. The gain of using it is
    also very small.
  - Organized options in sub-levels for easier overview.
  - Added default settings for umask as well as new file and directory
    modes.
  - Added an option to keep the permissions on files replacing by an
    upload.
  - Made the access method configuration finer grained. Now you can
    disable individual features like chmod and mkdir.
    COMPATIBILITY ALERT: Before the PUT method permission was used for
    the new features. This is no longer true and therefor server which
    allows PUT needs to enable the CHMOD, MKDIR and MV after
    upgrading!
- Removed htmlparse dependency from the Enhanced Directory Listings
  module since we have two parsing modules now.
- Quote the chars < > @ in http_encode_url and http_encode_string.
- added the excellent gbutton.pike module from Roxen 2.x
- Added processing instructions in the XML parser. This is tags using the
  syntax <?tagname contents ?>. Current existing processing instructions are
  <?pike ?> (Pike tag module), <?comment ?> (rxmltags), <?perl ?>
  (perl module).
- Wrote a tar filesystem module. This module allows you to mount an
  uncompressed tar file in the virtual filesystem.
- Added new http_error handler. The old 404 handler is still there, but
  disabled per default.
- Correctly find libraries for various versions of Sablotron (0.50 and
  0.44 tested).
- Fixed some bugs in the Caudium c-module.
- Fixed newer 7.1 compaztibility problems (bye bye Simulate).
- Applied Chris Davies custom changes to the SQL User Database. These add a
  configurable timeout for cached user entries and an option to block sites
  with too many failed authentication attempts.
- Fixed some bugs in the XSLT Template module, added more configurable
  options. Also fixed the setting of the base uri.